# Diamond

./: .gitignore  CMakeLists.txt  CompileShaders.bat  Config.cmake.in  README.md
include/: diamond.h
include/Diamond/: diamond.h  structures.h
src/: diamond.cpp  diamond.h
src/lib/glm/: LICENSE.txt
src/lib/imgui/: CMakeLists.txt
src/shaders/: basic.comp  basic.vert  mandel.comp  mandel.vert  sim.comp  sim.frag  sim.vert  test.frag  test.vert
src/testing/: main.cpp
src/util/: defs.h
